[package]
name = "did_you_go_hot"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.20.2"
eframe = { version = "0.34.1", features = ["persistence"] }
petgraph = "0.8.3"
rand = "0.10.1"
rustc-hash = "2.1.2"
serde = "1.0.228"
serde_json = "1.0.149"
smallvec = "1.15.1"
tinyvec = "1.11.0"

[profile.release]
debug = true
