[package]
name = "did_you_go_hot"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bumpalo = "3.20.2"
eframe = { version = "0.34.1", features = ["persistence"] }
flate2 = "1.1.9"
petgraph = "0.8.3"
rand = "0.10.1"
rustc-hash = "2.1.2"
serde = "1.0.228"
serde_json = "1.0.149"
smallvec = "1.15.1"
sysinfo = "0.39.2"
tinyvec = "1.11.0"
webbrowser = "1.2.1"

[profile.release]
debug = true
